# app/Http/Controllers/Controller.php
@@ -9,16 +9,6 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Info(title="My First API", version="0.1")
- * /**
- * @OA\SecurityScheme(
- *     type="http",
- *     description="Login with email and password to get the authentication token",
- *     name="Token based Based",
- *     in="header",
- *     scheme="bearer",
- *     bearerFormat="JWT",
- *     securityScheme="apiAuth",
- * )
  */
 
 class Controller extends BaseController
