# app/Models/User.php
@@ -6,17 +6,18 @@ use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
-use Laravel\Sanctum\HasApiTokens;
+
 use Tymon\JWTAuth\Contracts\JWTSubject;
+
 
 class User extends Authenticatable implements JWTSubject
 {
-    use HasApiTokens, HasFactory, Notifiable;
+    use HasFactory, Notifiable;
 
     /**
      * The attributes that are mass assignable.
      *
-     * @var string[]
+     * @var array
      */
     protected $fillable = [
         'name',
@@ -25,7 +26,7 @@ class User extends Authenticatable implements JWTSubject
     ];
 
     /**
-     * The attributes that should be hidden for serialization.
+     * The attributes that should be hidden for arrays.
      *
      * @var array
      */
@@ -35,7 +36,7 @@ class User extends Authenticatable implements JWTSubject
     ];
 
     /**
-     * The attributes that should be cast.
+     * The attributes that should be cast to native types.
      *
      * @var array
      */
@@ -48,7 +49,8 @@ class User extends Authenticatable implements JWTSubject
      *
      * @return mixed
      */
-    public function getJWTIdentifier() {
+    public function getJWTIdentifier()
+    {
         return $this->getKey();
     }
 
@@ -57,9 +59,55 @@ class User extends Authenticatable implements JWTSubject
      *
      * @return array
      */
-    public function getJWTCustomClaims() {
+    public function getJWTCustomClaims()
+    {
         return [
             "email" => $this->email
         ];
     }
 }
+//
+//namespace App\Models;
+//
+//use Illuminate\Contracts\Auth\MustVerifyEmail;
+//use Illuminate\Database\Eloquent\Factories\HasFactory;
+//use Illuminate\Foundation\Auth\User as Authenticatable;
+//use Illuminate\Notifications\Notifiable;
+//use Laravel\Sanctum\HasApiTokens;
+//
+//class User extends Authenticatable
+//{
+//    use HasApiTokens, HasFactory, Notifiable;
+//
+//    /**
+//     * The attributes that are mass assignable.
+//     *
+//     * @var string[]
+//     */
+//    protected $fillable = [
+//        'name',
+//        'email',
+//        'password',
+//    ];
+//
+//    /**
+//     * The attributes that should be hidden for serialization.
+//     *
+//     * @var array
+//     */
+//    protected $hidden = [
+//        'password',
+//        'remember_token',
+//    ];
+//
+//    /**
+//     * The attributes that should be cast.
+//     *
+//     * @var array
+//     */
+//    protected $casts = [
+//        'email_verified_at' => 'datetime',
+//    ];
+//}
+
+
