# client-app/src/components/auth/Register/types.ts
@@ -1,23 +1,23 @@
-export enum RegisterActionTypes {
-  REGISTER_AUTH = "REGISTER_AUTH"
-}
-
 export interface IRegisterModel {
-  name: string;
-  email: string;
-  password: string;
-  password_confirmation: string;
+    name: string,
+    email: string,
+    password: string,
+    password_confirmation: string,
 }
 
 export type RegisterError = {
-  name: Array<string>,
-  email: Array<string>,
-  password: Array<string>,
-  error: string
+    name: Array<string>,
+    email: Array<string>,
+    password: Array<string>,
+    error: string
+}
+
+export enum RegisterActionTypes {
+    REGISTER_AUTH = "REGISTER_AUTH",
 }
 
 export interface RegisterAuthAction {
-  type: RegisterActionTypes.REGISTER_AUTH
+    type: RegisterActionTypes.REGISTER_AUTH
 }
 
 export type RegisterAction = RegisterAuthAction;
