# routes/api.php
@@ -3,8 +3,8 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\ProductController;
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -22,17 +22,16 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get("/test",[App\Http\Controllers\API\TestController::class, "index"]);
 
-
 Route::group([
     'middleware' => 'api',
     'prefix' => 'auth'
 
 ], function ($router) {
-    Route::post('/login', [AuthController::class, 'login']);
-    Route::post('/register', [AuthController::class, 'register']);
-    Route::post('/logout', [AuthController::class, 'logout']);
-    Route::post('/refresh', [AuthController::class, 'refresh']);
-    Route::get('/user-profile', [AuthController::class, 'userProfile']);
+    Route::post('/login', [App\Http\Controllers\AuthController::class, 'login']);
+    Route::post('/register', [App\Http\Controllers\AuthController::class, 'register']);
+    Route::post('/logout', [App\Http\Controllers\AuthController::class, 'logout']);
+    Route::post('/refresh', [App\Http\Controllers\AuthController::class, 'refresh']);
+    Route::get('/user-profile', [App\Http\Controllers\AuthController::class, 'userProfile']);
 });
 
 Route::get('/products', [ProductController::class, 'index']);
